chore(webauthn): update @simplewebauthn

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@remix-run/react": "^1.11.0",
     "@remix-run/serve": "^1.11.0",
     "@remix-run/server-runtime": "^1.11.0",
-    "@simplewebauthn/browser": "^6.2.2",
-    "@simplewebauthn/server": "^6.2.2",
+    "@simplewebauthn/browser": "^7.0.0",
+    "@simplewebauthn/server": "^7.0.0",
     "cross-env": "^7.0.3",
     "isbot": "^3.6.3",
     "react": "^18.2.0",
@@ -47,7 +47,7 @@
     "@faker-js/faker": "^7.6.0",
     "@remix-run/dev": "^1.11.0",
     "@remix-run/eslint-config": "^1.11.0",
-    "@simplewebauthn/typescript-types": "6.3.0-alpha.1",
+    "@simplewebauthn/typescript-types": "7.0.0",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
